--- a/html/PBWPU/PBWPU009900.html
+++ b/html/PBWPU/PBWPU009900.html
@@ -96,27 +96,33 @@
 				<!-- content -->
 				<div class="content">
 
-					<style>
-						body {
-							background-color: var(--background-bg_lightGray);
-						}
-					</style>
-
 					<p class="description info body-small fc-typography-caption mt16">알림의 조회 기간은 14일입니다.</p>
 
-
-					<!-- division-center -->
-					<div class="division-center">
-
-						<div class="no-result">
-							<i class="icon-only icon-48 icon-alarm bg-icon-gray_1"></i>
-							<p class="body-medium fw-400">받은 알림이 없습니다.</p>
-						</div>
-
+					<div class="alarm-list mt16">
+						<ul>
+							<li class="unread">
+								<a href="#" aria-label="읽지 않음">
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<strong>제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+						</ul>
 					</div>
-					<!-- //division-center -->
-
-
 
 				</div>
 				<!-- //content -->
@@ -133,31 +139,31 @@
 
 			<div class="main-nav">
 				<ul>
-					<li>
+					<li class="list01 is-current">
 						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
-					<li>
+					<li class="list02 is-current">
 						<a href="">
 							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
-					<li>
+					<li class="list03 is-current">
 						<a href="">
 							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
 							<strong>홈</strong>
 						</a>
 					</li>
-					<li>
+					<li class="list04 is-current">
 						<a href="">
 							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
 							<strong>AI지식상담</strong>
 						</a>
 					</li>
-					<li>
+					<li class="list05 is-current">
 						<a href="">
 							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
 							<strong>알림</strong>
