--- a/html/PBWPU/PBWPU009900_nodata.html
+++ b/html/PBWPU/PBWPU009900_nodata.html
@@ -96,17 +96,17 @@
 				<!-- content -->
 				<div class="content">
 
-					<style>
-						body {
-							background-color: var(--background-bg_lightGray);
-						}
-					</style>
-
 					<p class="description info body-small fc-typography-caption mt16">알림의 조회 기간은 14일입니다.</p>
 
 
 					<!-- division-center -->
 					<div class="division-center">
+
+						<style>
+							body {
+								background-color: var(--background-bg_lightGray);
+							}
+						</style>
 
 						<div class="no-result">
 							<i class="icon-only icon-48 icon-alarm bg-icon-gray_1"></i>
@@ -128,7 +128,46 @@
 		<!-- //content end -->
 		<!-- //main-inner -->
 
+		<!-- bottom-btn -->
+		<div class="bottom-btn">
 
+			<div class="main-nav">
+				<ul>
+					<li class="list01 is-current">
+						<a href="#">
+							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<strong>펀드</strong>
+						</a>
+					</li>
+					<li class="list02 is-current">
+						<a href="">
+							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<strong>투자정보</strong>
+						</a>
+					</li>
+					<li class="list03 is-current">
+						<a href="">
+							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<strong>홈</strong>
+						</a>
+					</li>
+					<li class="list04 is-current">
+						<a href="">
+							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<strong>AI지식상담</strong>
+						</a>
+					</li>
+					<li class="list05 is-current">
+						<a href="">
+							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<strong>알림</strong>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+		<!-- //bottom-btn -->
 
 	</main>
 	<!-- //main -->
