--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -118,6 +118,7 @@
 						<div class="form-exchange">
 							<div class="label">
 								<button class="flag flag-us" data-micromodal-trigger="modal-select"><strong>USD</strong><span>미국 달러</span></button>
+								<!-- <button class="flag noflag" data-micromodal-trigger="modal-select"><strong>USD</strong><span>미국 달러</span></button> -->
 							</div>
 							<div class="ex-input-wrap">
 								<input type="number" placeholder="1">
