--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -153,15 +153,21 @@
 										<dt>3개월</dt>
 										<dd>+888.88%</dd>
 									</div>
-									<div class="list">
+									<div class="list fall">
 										<dt>6개월</dt>
 										<dd>-888.88%</dd>
 									</div>
-									<div class="list">
+									<div class="list steady">
 										<dt>12개월</dt>
 										<dd>-888.88%</dd>
 									</div>
 								</dl>
+								<div class="expect-desc">
+									<p>수익률 미수신</p>
+								</div>
+								<div class="expect-desc">
+									<p>설정기간 1개월 미경과</p>
+								</div>
 							</div>
 							<div class="stroke stroke-dashed my32"></div>
 							<div class="rate-status">
@@ -327,7 +333,7 @@
 							<div class="stroke px0"></div>
 							<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-popup04"><strong class="title-medium px4">투자에 따른 위험</strong></button>
 							<div class="stroke px0"></div>
-							<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-popup04"><strong class="title-medium px4">클래스 비교</strong></button>
+							<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-popup05"><strong class="title-medium px4">클래스 비교</strong></button>
 						</div>
 
 						<div class="stroke stroke4 stroke-fluid"></div>
@@ -377,7 +383,7 @@
 			<div class="snackbar-content-inner">
 				<button type="button" class="snackbar-content-close" aria-label="팝업 닫기" data-snackbar-close><i class="ico-close-16"></i></button>
 				<strong class="block fs-15 fc-red-600 fw-500">행내한</strong>
-				<p class="fs-14 fc-typography-body ">본자료는 행내한 자료로 직원의 정보제공이 목적이며 펀드 권유나 가입을 위해서는 별도의 절차를 거쳐야 합니다. <br> 외부로 유출되거나 투자권유 등에 활용되지 않도록 각별히 유의하시기 바랍니다. </p>
+				<p class="fs-14 fc-typography-body ">본자료는 직원에게 상품 정보를 제공하기 위한 목적으로 외부로 유출되거나 투자 권유, 계약 체결 등 다른 용도로 활용되지 않도록 유의하시기 바랍니다.</p>
 			</div>
 
 		</div>
@@ -595,6 +601,77 @@
 		</div>
 	</div>
 	<!-- //micromodal -->
+
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-popup05">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">클래스 비교</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content content-fluid">
+
+						<strong class="title-large py16 px24">원금손실위험</strong>
+
+						<div class="table-col content-fluid overflow-visible px0 scroll-end">
+							<table class="column01-sticky">
+								<caption>원금손실위험</caption>
+								<colgroup>
+									<col style="">
+									<col style="">
+									<col style="">
+									<col style="">
+								</colgroup>
+								<thead>
+									<tr>
+										<th scope="col">구분</th>
+										<th scope="col">총보수(년)</th>
+										<th scope="col">선취판매 수수료</th>
+										<th scope="col">환매 수수료</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>신한글로벌탄소중립솔루션 증권투자신탁(H)(주식)A1</td>
+										<td>1.341%</td>
+										<td>0.5%</td>
+										<td>90일 미만 이익금 기준 70%</td>
+									</tr>
+									<tr>
+										<td>신한글로벌탄소중립솔루션 증권투자신탁(H)(주식)A1</td>
+										<td>1.341%</td>
+										<td>0.5%</td>
+										<td>없음</td>
+									</tr>
+									<tr>
+										<td>신한글로벌탄소중립솔루션 증권투자신탁(H)(주식)A1</td>
+										<td>1.341%</td>
+										<td>0.5%</td>
+										<td>없음</td>
+									</tr>
+									<tr>
+										<td>신한글로벌탄소중립솔루션 증권투자신탁(H)(주식)A1</td>
+										<td>1.341%</td>
+										<td>없음</td>
+										<td>없음</td>
+									</tr>
+								</tbody>
+
+							</table>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
 
 	<script>
 		var options1 = {
