--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -485,7 +485,7 @@
 									<div class="label"></div>
 									<div class="input-wrap">
 										<input type="text" placeholder="한글과 영문, 숫자만 입력해주세요." aria-label="닉네임">
-                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -525,7 +525,7 @@
 						<div class="inp inp-medium">
 							<label>
 								<input type="checkbox">
-								<span class="label-title">닉네임명</span>
+								<span class="label-title"><span class="fc-status-active">닉네임명</span>으로 등록</span>
 							</label>
 						</div>
 
@@ -542,7 +542,7 @@
 						</div>
 
 						<p class="description error body-small mt10 fc-typography-caption">펀드에 대한 정보 및 영업 비법 등을 직원들과 자유롭게 나누는 공간입니다.</p>
-						<p class="description error body-small mt10 fc-typography-caption">게시판 취지에 맞지 않는 글&middot;댓글(단순불만, 민감한 주제, 위화감을 주는 글)은 삭제될 수 있습니다.</p>
+						<p class="description error body-small mt10 fc-typography-caption">게시판 취지에 맞지 않은 글, 댓글(단순불만, 민감한 주제, 위화감을 주는 글)은 삭제될 수 있습니다.</p>
 
 					</div>
 				</div>
