--- a/html/index.html
+++ b/html/index.html
@@ -87,12 +87,12 @@
 					</tr>
 
 					<tr>
-						<td>Template</td>
+						<td>Loader</td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">template</a></td>
+						<td class="al article"><a href="" class="link inner-arrow">loader</a></td>
 					</tr>
 				</tbody>
 				<tbody data-folder="components">
@@ -610,6 +610,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_04</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>실패</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_05</a></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
