--- a/html/PBWLO/PBWLO01002_05.html
+++ b/html/PBWLO/PBWLO01002_05.html
@@ -97,7 +97,7 @@
 							<div class="form">
 								<div class="input-wrap input-btn">
 									<input type="tel" placeholder="행번을 입력하세요." aria-label="행번 입력" value="90195181" readonly>
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+									<!-- <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button> -->
 								</div>
 								<p class="validate-text"></p>
 							</div>
