--- a/html/PBWCA/PBWCA029900.html
+++ b/html/PBWCA/PBWCA029900.html
@@ -99,7 +99,7 @@
 					<div class="schedule-section-title content-fluid">
 						<i class="icon-only icon-24 icon-calendar" aria-label="개인일정"></i>
 						<!-- 반복일 경우 -->
-						<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+						<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
 						<!-- //반복일 경우 -->
 						<strong class="headline-medium">본부 Workshop</strong>
 					</div>
