--- a/html/PBWCA/PBWCA040000.html
+++ b/html/PBWCA/PBWCA040000.html
@@ -103,7 +103,7 @@
 								<div class="label"></div>
 								<div class="input-wrap">
 									<input type="text" placeholder="제목, 메모 입력" aria-label="일정 검색">
-                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
@@ -246,7 +246,7 @@
 
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
-								<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+								<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
 								<strong class="title-medium">일정 제목</strong>
 							</div>
 							<div class="schedule-content">
@@ -346,7 +346,7 @@
 
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
-								<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+								<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
 								<strong class="title-medium">일정 제목</strong>
 							</div>
 							<div class="schedule-content">
