--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -690,31 +690,31 @@
 				//한국
 				const schedule_04 = document.querySelectorAll('.schedule_04 .schedule-wrap');
 				schedule_04.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label04" aria-title="한국"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label04" aria-label="한국"></div>');
 				})
 
 				//미국
 				const schedule_05 = document.querySelectorAll('.schedule_05 .schedule-wrap');
 				schedule_05.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label05 aria-title="미국"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label05 aria-label="미국"></div>');
 				})
 
 				//중국
 				const schedule_06 = document.querySelectorAll('.schedule_06 .schedule-wrap');
 				schedule_06.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label06" aria-title="중국"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label06" aria-label="중국"></div>');
 				})
 
 				//일본
 				const schedule_07 = document.querySelectorAll('.schedule_07 .schedule-wrap');
 				schedule_07.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label07" aria-title="일본"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label07" aria-label="일본"></div>');
 				})
 
 				//유럽
 				const schedule_08 = document.querySelectorAll('.schedule_08 .schedule-wrap');
 				schedule_08.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label08" aria-title="유럽"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label08" aria-label="유럽"></div>');
 				})
 			}
 
