--- a/html/PBWPU/PBWPU009900.html
+++ b/html/PBWPU/PBWPU009900.html
@@ -139,32 +139,32 @@
 
 			<div class="main-nav">
 				<ul>
-					<li class="list01 is-current">
+					<li class="list01">
 						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
-					<li class="list02 is-current">
-						<a href="">
+					<li class="list02">
+						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
-					<li class="list03 is-current">
-						<a href="">
+					<li class="list03">
+						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
 							<strong>홈</strong>
 						</a>
 					</li>
-					<li class="list04 is-current">
-						<a href="">
+					<li class="list04">
+						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
-							<strong>AI지식상담</strong>
+							<strong>금융+</strong>
 						</a>
 					</li>
 					<li class="list05 is-current">
-						<a href="">
+						<a href="#" aria-current="page">
 							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
 							<strong>알림</strong>
 						</a>
