--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -212,7 +212,7 @@
 
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
-								<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+								<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
 								<strong class="title-medium">일정 제목</strong>
 							</div>
 							<div class="schedule-content">
@@ -315,19 +315,19 @@
 				//개인 일정
 				const schedule_01 = document.querySelectorAll('.schedule_01 .schedule-wrap');
 				schedule_01.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label01" aria-title="개인 일정"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label01" aria-label="개인 일정"></div>');
 				})
 
 				//고객 생일
 				const schedule_02 = document.querySelectorAll('.schedule_02 .schedule-wrap');
 				schedule_02.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label02 aria-title="고객 생일"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label02" aria-label="고객 생일"></div>');
 				})
 
 				//수신 만기
 				const schedule_03 = document.querySelectorAll('.schedule_03 .schedule-wrap');
 				schedule_03.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label03" aria-title="수신 만기"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label03" aria-label="수신 만기"></div>');
 				})
 			}
 
