--- a/html/index.html
+++ b/html/index.html
@@ -493,6 +493,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">quill</a></td>
 					</tr>
 				</tbody>
+				<tbody data-folder="PBWMA">
+					<tr>
+						<td>PBWMA</td>
+						<td>메인</td>
+						<td>홈</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA000000</a></td>
+					</tr>
+				</tbody>
 				<tbody data-folder="PBWBU">
 					<tr>
 						<td>PBWBU</td>
