--- a/html/PBWMA/PBWMA030000.html
+++ b/html/PBWMA/PBWMA030000.html
@@ -78,7 +78,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>영업캘린더</h1>
+					<h1>알림</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -98,25 +98,31 @@
 
 					<p class="description info body-small fc-typography-caption mt16">알림의 조회 기간은 14일입니다.</p>
 
-
-					<!-- division-center -->
-					<div class="division-center">
-
-						<style>
-							body {
-								background-color: var(--background-bg_lightGray);
-							}
-						</style>
-
-						<div class="no-result">
-							<i class="icon-only icon-48 icon-alarm bg-icon-gray_1"></i>
-							<p class="body-medium fw-400">받은 알림이 없습니다.</p>
-						</div>
-
+					<div class="alarm-list mt16">
+						<ul>
+							<li class="unread">
+								<a href="#" aria-label="읽지 않음">
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<strong>제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</a>
+							</li>
+						</ul>
 					</div>
-					<!-- //division-center -->
-
-
 
 				</div>
 				<!-- //content -->
