--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -262,12 +262,12 @@
 
 					<!-- main-stock-section -->
 					<div class="main-stock-section content-fluid">
-						<div class="main-stock-title">
+						<div class="main-section-title">
 							<strong class="title-large">주요 지수</strong>
 							<a href="#" class="anchor chevron fs-15">전체보기</a>
 						</div>
 						<div class="main-stock-list">
-							<ul class="overflow-list pb8">
+							<ul class="overflow-list">
 								<li>
 									<a href="#">
 										<dl>
@@ -311,14 +311,14 @@
 									</a>
 								</li>
 							</ul>
-							<div class="body-caption px4 ar">2024-10-15 01:00 기준</div>
+							<div class="body-caption px4 ar mt8">2024-10-15 01:00 기준</div>
 						</div>
 					</div>
 					<!-- //main-stock-section -->
 
 					<!-- main-figure-section -->
 					<div class="main-figure-section">
-						<div class="main-figure-title">
+						<div class="main-section-title">
 							<strong class="title-large">펀드 동향</strong>
 						</div>
 						<div class="main-figure-list">
@@ -383,7 +383,7 @@
 
 					<!-- main-notice-section -->
 					<div class="main-notice-section">
-						<div class="main-notice-title">
+						<div class="main-section-title">
 							<strong class="title-large">공지사항</strong>
 							<a href="#" class="anchor chevron fs-15">전체보기</a>
 						</div>
@@ -391,6 +391,9 @@
 							<a href="#">
 								<p>우리은행 PB영업지원 APP이 오픈되었습니다.</p>
 								<div class="date">2024-11-04</div>
+							</a>
+							<a href="#">
+								<p class="description caution body-small fc-typography-caption ac">공지사항이 없습니다.</p>
 							</a>
 						</div>
 					</div>
@@ -451,14 +454,53 @@
 
 	</main>
 	<!-- //main -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-notice" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header">
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<strong class="title-medium">이곳에 공지사항의 제목이 들어갑니다.</strong>
+						<p class="fs-18 fw-400 px4 mt10">공지내용입니다. <br> 우리은행 PB영업지원 APP이 오픈되었습니다. 업무에 많은 도움이 되길 바랍니다. 공지내용입니다.</p>
+
+					</div>
+
+				</div>
+
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap pt16 pb0">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close="">자세히 보기</button>
+						</div>
+						<div class="btn-wrap pt8 pb16">
+							<button type="button" class="btn-large fs-18" data-micromodal-close="">더 이상 보지 않기</button>
+							<button type="button" class="btn-large fs-18" data-micromodal-close="">닫기</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
 	<script>
-		var swiper = new Swiper(".mySwiper", {
+		var swiper = new Swiper(" .mySwiper", {
 			slidesPerView: 1,
 			spaceBetween: 16,
 			pagination: {
 				el: ".swiper-pagination",
 			}
 		});
+		MicroModal.show('modal-notice');
 	</script>
 </body>
 
