--- a/html/PBWMA/PBWMA030000_nodata.html
+++ b/html/PBWMA/PBWMA030000_nodata.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
 
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
-
 	<!-- [plugins] -->
 	<!-- highlight -->
 	<link rel="stylesheet" href="../../resources/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
@@ -54,7 +53,6 @@
 	<script src="../../resources/plugins/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script>
 	<!-- //[plugins] -->
 
-	<!-- ui source -->
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
 	<link rel="stylesheet" href="../../resources/css/ui-variable.css">
 	<link rel="stylesheet" href="../../resources/css/ui-default.css">
@@ -62,76 +60,118 @@
 	<link rel="stylesheet" href="../../resources/css/ui-style.css">
 	<link rel="stylesheet" href="../../resources/css/ui-content.css">
 	<link rel="stylesheet" href="../../resources/css/ui-plugins.css">
-	<link rel="stylesheet" href="../../resources/css/ui-guide.css">
 
 	<script src="../../resources/js/ui-script.js"></script>
 	<script src="../../resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
-	<style>
-		.ui-guide .guide-column-list {
-			display: block;
-		}
-	</style>
 </head>
 
 <body>
-	<div class="ui-guide">
-		<h1>Button Inner Icon</h1>
-		<p>Anchor, Button 혼용 가능합니다.</p>
 
-		<div class="ui-guide-section">
-			<h2>Button <span>Large</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i>공유</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>Check</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>명함 등록</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 로그인</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 로그인</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-refresh"></i>다시 시도</button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
-				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-compare"></i></button>
-				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-check"></i></button>
-			</div>
-			<hr>
-			<h2>Button <span>Medium</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-medium btn-secondary btn-round">펀드 찾기<i class="ico-search"></i></button>
-				<button type="button" class="btn-medium btn-primary btn-round">지수 찾기<i class="ico-chevron bg-icon-white"></i></button>
+	<!-- main -->
+	<main>
 
-			</div>
-			<hr>
-			<h2>Button <span>Small</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-delete"></i>삭제</button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-refresh"></i>다시 시도</button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round">바로가기<i class="ico-chevron"></i></button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round">반도체<i class="ico-close-16"></i></button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-reply"></i>답글</button>
-				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-grid"></i>표 보기</button>
-				<div class="btn-xsmall btn-outlined btn-round">
-					<button class="btn-inner">반도체</button>
-					<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+		<!-- header -->
+		<header>
+			<div class="main-header">
+				<div class="left">
+					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
+				</div>
+				<div class="center">
+					<h1>알림</h1>
+				</div>
+				<div class="right">
+					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
 				</div>
 			</div>
-			<hr>
-			<h2>Button <span>Noborder</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
-			</div>
-			<h2>Button <span>Noborder Shadow</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
-			</div>
-			<h2>Button <span>Border</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-border" aria-label="정렬"><i class="ico-sorting"></i></button>
-				<button type="button" class="btn-border is-active" aria-label="정렬"><i class="ico-sorting"></i></button>
-			</div>
-		</div>
+		</header>
+		<!-- //header -->
 
-	</div>
+		<!-- main-inner -->
+		<!-- content start -->
+		<div class="main-inner">
+
+			<!-- container -->
+			<div id="container">
+				<!-- content -->
+				<div class="content">
+
+					<p class="description info body-small fc-typography-caption mt16">알림의 조회 기간은 14일입니다.</p>
+
+
+					<!-- division-center -->
+					<div class="division-center">
+
+						<style>
+							body {
+								background-color: var(--background-bg_lightGray);
+							}
+						</style>
+
+						<div class="no-result">
+							<i class="icon-only icon-48 icon-alarm bg-icon-gray_1"></i>
+							<p class="body-medium fw-400">받은 알림이 없습니다.</p>
+						</div>
+
+					</div>
+					<!-- //division-center -->
+
+
+
+				</div>
+				<!-- //content -->
+			</div>
+			<!-- //container -->
+
+
+		</div>
+		<!-- //content end -->
+		<!-- //main-inner -->
+
+		<!-- bottom-btn -->
+		<div class="bottom-btn">
+
+			<div class="main-nav">
+				<ul>
+					<li class="list01">
+						<a href="#">
+							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<strong>펀드</strong>
+						</a>
+					</li>
+					<li class="list02">
+						<a href="#">
+							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<strong>투자정보</strong>
+						</a>
+					</li>
+					<li class="list03">
+						<a href="#">
+							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<strong>홈</strong>
+						</a>
+					</li>
+					<li class="list04">
+						<a href="#">
+							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<strong>금융+</strong>
+						</a>
+					</li>
+					<li class="list05 is-current">
+						<a href="#" aria-current="page">
+							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<strong>알림</strong>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+		<!-- //bottom-btn -->
+
+	</main>
+	<!-- //main -->
+
 </body>
 
 </html>
