--- a/html/index.html
+++ b/html/index.html
@@ -502,6 +502,46 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWMA000000</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>펀드</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA010000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>투자정보</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA020000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>금융+</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA040000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>알림</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA030000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>알림없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWMA030000_nodata</a></td>
+					</tr>
 				</tbody>
 				<tbody data-folder="PBWBU">
 					<tr>
@@ -1097,24 +1137,6 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWME030000</a></td>
-					</tr>
-				</tbody>
-				<tbody data-folder="PBWPU">
-					<tr>
-						<td>PBWPU</td>
-						<td>알림함</td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWPU009900</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td>알림없음</td>
-						<td></td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWPU009900_nodata</a></td>
 					</tr>
 				</tbody>
 
