--- a/html/PBWIV/PBWIV090000.html
+++ b/html/PBWIV/PBWIV090000.html
@@ -264,7 +264,7 @@
 									<div class="label"></div>
 									<div class="input-wrap">
 										<input type="text" placeholder="키워드로 검색해 보세요." aria-label="검색">
-                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -335,13 +335,13 @@
 								</div>
 								<ul>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 								</ul>
 							</div>
