--- a/html/PBWIV/PBWIV110000.html
+++ b/html/PBWIV/PBWIV110000.html
@@ -331,13 +331,13 @@
 								</div>
 								<ul>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 									<li>
-										<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
+										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
 									</li>
 								</ul>
 							</div>
