--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -125,7 +125,7 @@
 
 						<div class="main-schedule-week">
 							<ul>
-								<li class="weekend is-schedule">
+								<li class="weekend">
 									<div class="date">
 										<div class="text">13</div>
 									</div>
@@ -185,7 +185,7 @@
 										<div class="schedule-title">
 											<div class="schedule-title-inner">
 												<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
-												<strong class="title-small"><span>홍*동 수신만기</span></strong>
+												<strong class="title-small"><span>홍*동</span></strong>
 											</div>
 											<div class="value">100,000,000원</div>
 										</div>
