--- a/html/PBWMA/PBWMA040000.html
+++ b/html/PBWMA/PBWMA040000.html
@@ -78,7 +78,7 @@
 					<button type="button" class="header-logo-btn"><i></i>PB WON</button>
 				</div>
 				<div class="center">
-					<h1><span class="blind">PBWON 홈</span></h1>
+					<h1><span class="blind">금융+</span></h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
