--- a/html/PBWMA/PBWMA030000_nodata.html
+++ b/html/PBWMA/PBWMA030000_nodata.html
@@ -75,10 +75,10 @@
 		<header>
 			<div class="main-header">
 				<div class="left">
-					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
+					<button type="button" class="header-logo-btn"><i></i>PB WON</button>
 				</div>
 				<div class="center">
-					<h1>알림</h1>
+					<h1><span class="blind">알림</span></h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
