--- a/html/PBWFU/PBWFU070000.html
+++ b/html/PBWFU/PBWFU070000.html
@@ -234,7 +234,7 @@
 							<button type="button" class="btn-xsmall btn-outlined btn-round">비교할 펀드 추가</button>
 						</div>
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary">비교하기</button>
+							<button type="button" class="btn-medium btn-primary">비교하기</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
